--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,93 @@
-@import url(http://fonts.googleapis.com/css?family=Lobster);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
+/**
+ *
+ * Font imports
+ *
+**/
 
-body {
-	background-color: #ededed;
+@import url(http://fonts.googleapis.com/css?family=Lobster|Roboto:300,400);
+
+/**
+ *
+ * Per-Slide things
+ *
+**/
+
+.sectionHeader {
+	font-size: 40px;
+	font-family: 'Lobster', cursive;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
 }
+.sectionMain {
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: 'Roboto', sans-serif;
+}
+/**
+ *
+ * Slide 1
+ *
+**/
 
-.lobster {
+#foundationText {
+	font-size: 144px;
 	font-family: 'Lobster', cursive;
 }
+#drivenText {
+	font-size: 40px;
+	font-family: 'Roboto', sans-serif;
+}
+#topSectionSubtitle {
+	font-size: 16;
+}
+/**
+ *
+ * Slide 2
+ *
+**/
 
-.os_light {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
+.project-name {
+	font-family: 'Lobster', cursive;
+}
+.project-description {
+	font-family: 'Roboto', cursive;
+}
+.project-icons {
+	font-size: 7em;
+	color: #000000;
+}
+.project-link {
+	color: #000000;
 }
 
-header {
-	width: 100%;
-	height: 550px;
-	background-image: url('../img/img_header.jpg');
-	background-position: 25%;
-	box-shadow: 0px 2px 2px rgba(0,0,0,.15);
+.contactUsForm {
 }
 
-header > .header_text {
-	padding-top: 175px;
-	text-align: center;
-	color: #dddddd
+.contactUsName {
+	border: 0px;
+	outline: 0px;
+	text-decoration: underline;
+	background-color: #34495e;
+		font-family: 'Lobster', cursive;
+		text-align: center;
+	color:#ecf0f1;
+	font-size: 22px;
+
 }
 
-header > .header_text > h1 {
-	font-size: 40pt;
-	text-shadow: 0px 4px 2px rgba(0,0,0,.1);
+.contactUsMessage {
+	outline: 0px;
+	border: 0px;
+	color:#ecf0f1;
+	background-color: #2c3e50;
 }
 
-header > .header_text > p {
-	font-size: 15pt;
-	text-shadow: 0px 4px 2px rgba(0,0,0,.1);
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
-}
-
-.project-content {
-	position: relative;
-}
-
-.project-content > #stats {
-	position: absolute;
-	top: 15px;
-	right: 15px;
-}
-
-.project-content > #dates {
-	position: absolute;
-	top: 15px;
-	left: 15px;
-}
-
-@media only screen and (max-width: 600px) {
-	header > .header_text > h1 {
-		font-size: 25pt;
-		text-shadow: 0px 4px 2px rgba(0,0,0,.1);
-	}
+.contactUsSubmit {
+	background-color: #2c3e50;
+	border-radius: 5px;
+	outline: 0px;
+	border: 0px;
+	padding: 5px;
 }
