--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,33 +61,29 @@
 .project-link {
 	color: #000000;
 }
-
-.contactUsForm {
-}
-
-.contactUsName {
+.contactUsForm {} .contactUsName {
 	border: 0px;
 	outline: 0px;
 	text-decoration: underline;
 	background-color: #34495e;
-		font-family: 'Lobster', cursive;
-		text-align: center;
-	color:#ecf0f1;
+	font-family: 'Lobster', cursive;
+	text-align: center;
+	color: #ecf0f1;
 	font-size: 22px;
-
 }
-
 .contactUsMessage {
 	outline: 0px;
 	border: 0px;
-	color:#ecf0f1;
+	color: #ecf0f1;
 	background-color: #2c3e50;
 }
-
 .contactUsSubmit {
 	background-color: #2c3e50;
 	border-radius: 5px;
 	outline: 0px;
 	border: 0px;
 	padding: 5px;
+}
+.twitter-timeline {
+	height: 200px;
 }
