--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,11 @@ html {
   padding: 0px;
 }
 
+@media screen and (min-width: 35.5em) {
+  .sectionTitle {
+    font-size: 28px;
+  }
+}
 div#intro {
   height: 100vh;
   background-image: url("../img/intro.png");
@@ -112,15 +117,4 @@ div#intro {
   background-color: red;
   height: 100vh;
   width: 100%;
-}
-
-@media screen and (orientation: landscape) {
-  #portrait {
-    display: none;
-  }
-}
-@media screen and (orientation: portrait) {
-  #main {
-    display: none;
-  }
 }
