--- a/css/index.css
+++ b/css/index.css
@@ -3,19 +3,6 @@ html {
   padding: 0px;
 }
 
-@media screen and (min-width: 35.5em) {
-  .sectionTitle {
-    font-size: 28px;
-  }
-}
-div#intro {
-  height: 100vh;
-  background-image: url("../img/intro.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 .sectionInner {
   position: relative;
   top: 50%;
@@ -29,6 +16,11 @@ div#intro {
   font-size: 48px;
 }
 
+@media screen and (min-width: 35.5em) {
+  .sectionTitle {
+    font-size: 28px;
+  }
+}
 .sectionContent {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -63,6 +55,14 @@ div#intro {
 #navlist li a {
   color: #000;
   text-decoration: none;
+}
+
+#intro {
+  height: 100vh;
+  background-image: url("../img/intro.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 #newBreed {
@@ -111,10 +111,4 @@ div#intro {
 
 #codeContent {
   color: #000;
-}
-
-#portrait {
-  background-color: red;
-  height: 100vh;
-  width: 100%;
 }
