--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800|Lobster+Two);
-html, body {
+html,
+body {
   margin: 0px;
   padding: 0px;
 }
