--- a/sass/projects.scss
+++ b/sass/projects.scss
@@ -1,9 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800|Lobster+Two);
-html,body {
+ html,
+body {
 	margin: 0px;
 	padding: 0px;
 }
- #main {
+#main {
 	padding-top: 64px;
 }
 .project {
